# a2a-protocol

google_a2a_demo/: agent_executor.py  main.py  pyproject.toml  test_client.py
python_a2a_demo/: calculator_agent.py  calculator_client.py  echo_agent.py  echo_client.py  greeting_agent.py  greeting_client.py  langchain_to_a2a_client.py  langchain_to_a2a_server.py  llm_agent.py  llm_client.py  main.py  mcp_to_langchain_agent.py  pyproject.toml
travel-planner-a2a protocol/: LocalLLMAgent.py  README.md  TavilySearchAgent.py  TravelPlannerApp.py  Travel_Planner_Agent.py  WeatherAgent.py  main.py  pyproject.toml
